...
                                    <constraint firstAttribute="height" constant="40" id="SjV-Uh-rPM"/>
                                </constraints>
                                <state key="normal" title="Horizontal left"/>
                                <connections>
                                    <action selector="buttonTappedWithSender:" destination="fsy-Eu-Z49" eventType="touchUpInside" id="TMT-Vp-x4E"/>
...
                                    <constraint firstAttribute="height" constant="40" id="OAR-Wl-zHV"/>
                                </constraints>
                                <state key="normal" title="Horizontal right"/>
                                <connections>
                                    <action selector="buttonTappedWithSender:" destination="fsy-Eu-Z49" eventType="touchUpInside" id="OG1-8a-Mut"/>
...
                                    <constraint firstAttribute="height" constant="40" id="v0x-j1-ogo"/>
                                </constraints>
                                <state key="normal" title="Vertical up"/>
                                <connections>
                                    <action selector="buttonTappedWithSender:" destination="fsy-Eu-Z49" eventType="touchUpInside" id="kfc-v0-MuB"/>
...
                                    <constraint firstAttribute="height" constant="40" id="qgR-6v-XP2"/>
                                </constraints>
                                <state key="normal" title="Vertical down"/>
                                <connections>
                                    <action selector="buttonTappedWithSender:" destination="fsy-Eu-Z49" eventType="touchUpInside" id="eMZ-LX-rfl"/>
...
                                    <constraint firstAttribute="height" constant="40" id="PFD-F9-5rm"/>
                                </constraints>
                                <state key="normal" title="Fade"/>
                                <connections>
                                    <action selector="buttonTappedWithSender:" destination="fsy-Eu-Z49" eventType="touchUpInside" id="qdU-RI-tJY"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First view controller" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eTK-w8-35T">
                                <rect key="frame" x="16" y="76" width="343" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Second view controller" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="85h-gc-H3A">
                                <rect key="frame" x="16" y="76" width="343" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
